# OpenPyrolysis

./: .gitignore  csg_engine.py  pyproject.toml  pyro_reactor_full.py  pyro_reactor_sim.py  setup.py  simple_run.py  test_csg_engine.py
openpyrolysis/: kinetics.py  materials.py  simulation.py
openpyrolysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
openpyrolysis/cpp_backend/: bindings.cpp  kinetics.cpp
src/: main.py
src/openpyrolysis/: batch_reactor.py  cli.py  simulator.py
src/openpyrolysis/data/: plastics.json
tests/: test_main.py
