[build-system]
requires = ["setuptools>=64", "pybind11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openpyrolysis"
version = "0.1.0"
description = "A pyrolysis simulation library"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
